# signals-study

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plan.md
client/: CMakeLists.txt  README.md
client/app/: client_app.cpp  client_app.h  main.cpp
client/common/: logging.h  telemetry_types.h
client/config/: client_config.h  render_config.h
client/networking/: grpc_client.cpp  grpc_client.h  historical_stream.cpp  live_stream.cpp
client/rendering/: action_bar.cpp  action_bar.h  monitor_layout.cpp  monitor_layout.h  numeric_panel.cpp  numeric_panel.h  render_buffers.cpp  render_buffers.h  status_bar.cpp  status_bar.h  waveform_renderer.cpp  waveform_renderer.h
client/tests/: grpc_client_tests.cpp  navigation_tests.cpp  render_buffers_tests.cpp  timeline_tests.cpp
client/timeline/: playback_state.cpp  playback_state.h  timeline_controller.cpp  timeline_controller.h
client/ui/: channel_panel.cpp  channel_panel.h  telemetry_view.cpp  telemetry_view.h
consumer/: CMakeLists.txt  README.md
consumer/app/: app.cpp  app.h  main.cpp
consumer/common/: logging.h  telemetry_types.h  thread_utils.h  timestamps.h
consumer/config/: consumer_config.h
consumer/grpc/: grpc_broadcaster.cpp  grpc_broadcaster.h  telemetry.proto  telemetry_service.cpp  telemetry_service.h
consumer/ingestion/: ingestion_manager.cpp  ingestion_manager.h  packet_queue.cpp  packet_queue.h
consumer/persistence/: persistence_events.cpp  persistence_events.h  sqlite_writer.cpp  sqlite_writer.h
consumer/processing/: processing_engine.cpp  processing_engine.h  signal_metrics.cpp  signal_metrics.h
consumer/tests/: grpc_tests.cpp  ingestion_tests.cpp  persistence_tests.cpp  processing_tests.cpp  queue_tests.cpp  replay_tests.cpp
generator/: CMakeLists.txt  README.md  generator.c  generator.h  generator_internal.h  generator_simulations.c  generator_simulations.h
generator/tests/: generator_tests.cpp  simulation_tests.cpp  timing_tests.cpp
